feat: updated readme

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -8,6 +8,7 @@ services:
       - OAUTH_CLIENT_ID=$OAUTH_CLIENT_ID
       - OAUTH_AUTHORITY=$OAUTH_AUTHORITY
       - OAUTH_CLIENT_SECRET=$OAUTH_CLIENT_SECRET
+      - OAUTH_REDIRECT_URI=$OAUTH_REDIRECT_URI
       - PORT=$PORT
       - ELASTIC_NODE=$ELASTIC_NODE
       - ELASTICSEARCH_USERNAME=$ELASTICSEARCH_USERNAME
